@@ -82,8 +82,11 @@ Core and Builtins
 Library
 -------
 
-- Issue #5042: Structure sub-subclass does now initialize correctly
-  with base class positional arguments.
+- Issue #4606: Passing 'None' if ctypes argtype is set to POINTER(...)
+  does now always result in NULL.
+
+- Issue #5042: ctypes Structure sub-subclass does now initialize
+  correctly with base class positional arguments.
 
 - Issue #6938: Fix a TypeError in string formatting of a multiprocessing
   debug message.
